--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 spring.application.name=Employee_Server
 server.port=${PORT:8081}
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:employee}
-spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:1999}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:employee}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:1999}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate and JPA configuration
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 spring.jpa.show-sql=${SHOW_SQL:true}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-
+#------------------------------------------------------------------------------
+#spring.application.name=Employee_Server
+#server.port=${PORT:8081}
+#spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:employee}
+#spring.datasource.username=${POSTGRES_USER:postgres}
+#spring.datasource.password=${POSTGRES_PASSWORD:1999}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+## Hibernate and JPA configuration
+#spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+#spring.jpa.show-sql=${SHOW_SQL:true}
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
