--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
+# Application Name and Port Configuration
 spring.application.name=Employee_Server
-server.port=${PORT:8081}
+server.port=${PORT:8081}  # Default to 8081 if PORT is not set
+
+# PostgreSQL DataSource Configuration
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:employee}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:1999}
+spring.datasource.username=${DB_USERNAME:postgres}  # Default to 'postgres' if DB_USERNAME is not set
+spring.datasource.password=${DB_PASSWORD:1999}  # Default to '1999' if DB_PASSWORD is not set
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate and JPA configuration
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
-spring.jpa.show-sql=${SHOW_SQL:true}
+# Hibernate and JPA Configuration
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}  # Default to 'update' if DDL_AUTO is not set
+spring.jpa.show-sql=${SHOW_SQL:true}  # Default to 'true' if SHOW_SQL is not set
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 #------------------------------------------------------------------------------
 #spring.application.name=Employee_Server
 #server.port=${PORT:8081}
